--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,14 @@
 name = "prova02-api-rest"
 version = "0.1.0"
 description = ""
-authors = ["Seu Nome <seuemail@email.com>"]
+authors = ["Vitoria Zanella <zanellavitoria564@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-fastapi = "^0.104.1"
-uvicorn = "^0.24.0.post1"
+python = "^3.12"
+sqlalchemy = "^2.0.23"
+pydantic = "^1.10.13"
 sqlmodel = "^0.0.12"
-psycopg2-binary = "^2.9.9"
-
 
 [build-system]
 requires = ["poetry-core"]
